Update apiVersion for LLM entities
